[metadata]
name = oii
version = 0.0.1
description = Package of utilities, prototypes, and apps for Ocean Imaging Informatics project.
url = https://github.com/yosoyjay/oii/tree/main
classifiers =
    Programming Langugage :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[sdist]
formats = gztar, zip

[check-manifest]
ignore =
    *.sh
    *.m
    *.yaml
    *.yml
    src/oii/matlab

[options]
install_requires =
    cython >= 0.29
    psycopg2
    sqlalchemy
    flask
    werkzeug
    paramiko
    celery
    pika
    scikit-image
    numpy >= 1.16
    pandas
    scipy >= 1.4
    scikit-learn
    pillow
    lxml

package_dir =
    = src

packages = find:

python_requires = >=3.6

[options.packages.find]
where = src